// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Equation Functions - Integral Symbol 1 1`] = `
Array [
  0.7,
  0,
  0.13999,
  0,
  0.7,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Integral Symbol 1 2`] = `
Array [
  0.13299,
  0,
  0,
  0,
  0.2009,
  -0.0756,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Integral Symbol 2 1`] = `
Array [
  0.7,
  0,
  0.10487,
  0,
  0.7,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Integral Symbol 2 2`] = `
Array [
  0.09787,
  0,
  0,
  0,
  0.2009,
  -0.0756,
  0,
  0,
  1,
]
`;
